
8.13  2019-03-14
  - Added EXPERIMENTAL min_compress_size attribute to Mojolicious::Renderer.
    (CandyAngel, mjemmeson)

8.12  2019-01-27
  - Added EXPERIMENTAL timeout method to Mojo::Promise. (batman)
  - Removed deprecated module Mojolicious::Plugin::PODRenderer.
  - Removed deprecated method mojo_lib_dir from Mojo::Home.
  - Fixed rare warning in Mojo::Log. (Grinnz)

8.11  2019-01-01
  - Added EXPERIMENTAL support for SameSite cookies to better protect
    Mojolicious applications from CSRF attacks. (dylanwh, sri)
  - Added EXPERIMENTAL samesite attributes to Mojo::Cookie::Response and
    Mojolicious::Cookies. (dylanwh, sri)
  - Added lstat method to Mojo::File. (Grinnz)
  - Added remove method to Mojo::File.
  - Improved eval command with support for promises. (jberger)
  - Improved Mojo::JSON::Pointer to ignore many invalid JSON Pointers.

8.10  2018-12-18
  - Added reset event to Mojo::IOLoop.
  - Added limit argument to split method in Mojo::ByteStream. (s1037989)

8.09  2018-12-02
  - Added touch method to Mojo::File.
  - Added max_depth option to list_tree method in Mojo::File.

8.08  2018-11-26
  - Added stat method to Mojo::File.

8.07  2018-11-16
  - Fixed a bug that caused debug log messages to be generated for static files.
  - Fixed a bug in Mojo::Server::Morbo that prevented the before_server_start
    hook from getting emitted.

8.06  2018-11-07
  - Added support for progress updates to Mojo::IOLoop::Subprocess. (karjala)
  - Added progress method to Mojo::IOLoop::Subprocess. (karjala)
  - Added progress event to Mojo::IOLoop::Subprocess. (karjala)
  - Improved debug, error, fatal, info and warn methods in Mojo::Log to accept
    closures to generate log messages on demand. So expensive code for debugging
    can be deactivated easily in production.
  - Improved Mojo::Log to use the time format "2018-11-08 14:25:5.76027" and to
    include the process id in log messages.