@@ -2,6 +2,7 @@
 8.13  2019-03-14
   - Added EXPERIMENTAL min_compress_size attribute to Mojolicious::Renderer.
     (CandyAngel, mjemmeson)
+  - Improved the security of signed cookies by also signing the cookie name.
 
 8.12  2019-01-27
   - Added EXPERIMENTAL timeout method to Mojo::Promise. (batman)
